fix title spacing, add inline styles

--- a/src/App.css
+++ b/src/App.css
@@ -317,7 +317,6 @@ ul {
   font-weight: 700;
   line-height: 32px;
   color: #fff;
-  padding: 0;
   text-decoration: none;
   display: flex;
 }
